<resources>
    <string name="app_name">SmarTest</string>
    <string name="studia">Studia</string>
    <string name="smartest_site">jumapp.com</string>
    <string name="smartest_mail">jumplatform@gmail.com</string>
    <string name="es">Esercitazione</string>
    <string name="ex">Simulazione</string>
    <string name="stat">Statistiche</string>
    <string name="squirrel">Squirrel</string>
    <string name="correct">Corrette </string>
    <string name="details">Dettagli </string>
    <string name="modalita">Modalita </string>
    <string name="statistics">Statistiche </string>
    <string name="continua">Continua </string>

    <string name="not_pass">Non Superato!</string>
    <string name="wrong">Sbagliate </string>
    <string name="not_aswered">Non date </string>
    <string name="question_viewer">Visualizza Domande</string>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="error_message_range_date">Seleziona un intervallo di giorni.</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>

    <string name="question">Il monte più alto di italia?</string>

    <string name="exercise_sample">Cristina ha percorso 12/25 di una strada e Eleonora ha percorso 23/31 della stessa strada. Chi ha percorso il tragitto maggiore</string>
    <string name="a">Cristina.</string>
    <string name="b">Cristina, che ha percorso quasi il doppio del tragitto rispetto ad Eleonora</string>
    <string name="c">Eleonora</string>
    <string name="d">Hanno percorso lo stesso tragitto.</string>

    <string name="launch_intro_activity">Launch intro activity</string>

    <string name="descrizione_concorso"> Ricordiamo che la prova scritta di preselezione consisterà nella somministrazione di 120 quesiti a risposta multipla, così ripartiti:\n\n
        30 volti ad accertare il grado di conoscenza della lingua italiana, anche sul piano ortogrammaticale e sintattico\n\n
        20 di attualità, educazione civica, storia e geografia\n\n
        20 di lingua inglese\n\n
        30 di algebra, geometria e trigonometria\n\n
        10 relativi a deduzioni logiche (in questo caso alcune domande potranno far riferimento a grafici e diagrammi)\n\n
        10 relativi a elementi di informatica (in questo caso alcune domande potranno far riferimento a immagini)\n\n
        Il punteggio finale della prova sarà calcolato attribuendo 0,25 punti per ogni risposta esatta, 0 punti per ogni risposta non data o multipla e -0,05 punti per ogni risposta errata.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="question_viewer_cab_title_x">Selection (%1$d)</string>
    <string name="question_viewer_done">Done</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_delete">delete</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>


</resources>
