<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:background="@color/main_color_dark"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="15.46"
        android:background="@drawable/bg_round_rect"
        android:gravity="center"
        android:text="UFFICIALI ESERCITO 2017"
        android:textColor="@color/white"
        android:textStyle="bold"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="85"
            android:weightSum="100">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60">

                <com.gigamole.library.ArcProgressStackView
                    android:id="@+id/apsv"
                    android:layout_width="215dp"
                    android:layout_height="215dp"
                    android:layout_gravity="center"
                    app:apsv_rounded="true"
                    app:apsv_shadowed="false"
                    app:apsv_animated="true"
                    app:apsv_dragged="false"
                    app:apsv_typeface="fonts/agency.ttf"
                    app:apsv_text_color="#fff"
                    app:apsv_shadow_distance="0dp"
                    app:apsv_shadow_angle="0"
                    app:apsv_shadow_radius="0dp"
                    app:apsv_shadow_color="#000"
                    app:apsv_animation_duration="1000"
                    app:apsv_interpolator="@android:anim/bounce_interpolator"
                    app:apsv_draw_width="50%"
                    app:apsv_model_offset="-5dp"
                    app:apsv_model_bg_enabled="true"
                    app:apsv_start_angle="180"
                    app:apsv_sweep_angle="360"
                    app:apsv_indicator_orientation="horizontal"/>

            </FrameLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:layout_margin="10dp"
                android:background="@drawable/bg_round_rect"
                android:weightSum="100">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:layout_marginTop="10dp"
                    android:weightSum="100">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="13" />

                    <ImageView
                    android:id="@+id/colorCorrect"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/qst_correct"
                    android:layout_weight="0.28" />

                    <TextView
                        android:text="@string/correct"
                        android:layout_width="0dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:textColor="@color/white"
                        android:id="@+id/textCorrect" />

                    <ImageView
                        android:id="@+id/colorWrong"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/qst_wrong"
                        android:layout_weight="0.28" />

                    <TextView
                        android:text="@string/wrong"
                        android:layout_width="0dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:textColor="@color/white"
                        android:id="@+id/textWong" />
                    <ImageView
                        android:id="@+id/colorNotAnswered"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/qst_not_answered"
                        android:layout_weight="0.28" />

                    <TextView
                        android:text="@string/not_aswered"
                        android:layout_width="0dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:textColor="@color/white"
                        android:id="@+id/textNotAnswered" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7" />

                    <TextView
                        android:text="000"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewCorrect"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_weight="10" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5" />

                    <TextView
                        android:text="000"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewWrong"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_weight="10" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4" />

                    <TextView
                        android:text="000"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewNotAnswered"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_weight="10" />
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6" />
                </LinearLayout>

                <TextView
                    android:id="@+id/outcome"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#ff0000"
                    android:textSize="25dp"
                    android:text="@string/not_pass" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="14.38">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.79" />

                <Button
                    android:text="@string/continua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonStatistics"
                    android:layout_weight="0.79" />


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.79" />
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>
</LinearLayout>